--- a/semanas/semana3.html
+++ b/semanas/semana3.html
@@ -3,30 +3,151 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Semana 3: Designer da Minha Vida!</title>
     <link rel="stylesheet" href="../css/semanas.css">
-    <title>Semana 3 - Plano de Férias</title>
 </head>
 <body>
-    <header>
-        <h1>Atividades da Semana 3</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Atividade 1</h2>
-            <p>Descrição da atividade 1 da semana 3.</p>
-        </section>
-        <section>
-            <h2>Atividade 2</h2>
-            <p>Descrição da atividade 2 da semana 3.</p>
-        </section>
-        <section>
-            <h2>Atividade 3</h2>
-            <p>Descrição da atividade 3 da semana 3.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 Plano de Férias - João Miguel</p>
-    </footer>
+    <div class="container">
+        <a href="../index.html" class="back-button">← Voltar ao Mapa de Missões</a>
+        
+        <div class="weekly-briefing">
+            <h2>Missão: Mestre das Palavras! 🔤</h2>
+            <p>
+                Bem-vindo à Semana 3, João Miguel! Prepare-se para desafios de verdade: você vai aprender a montar frases completas em inglês, usar adjetivos e cores na ordem certa, escolher entre <span class="en-word">have</span> e <span class="en-word">want</span>, praticar perguntas e respostas, e até decifrar códigos secretos de áudio! Cada treino vai te deixar mais rápido e criativo para se comunicar em inglês no dia a dia. Vamos jogar e desbloquear novos poderes com as palavras!
+                <button class="audio-btn" data-audio-src="../assets/audio/semana3_intro_geral.mp3">🔊</button>
+            </p>
+        </div>
+
+        <main>
+            <!-- TREINO 1: TRADUÇÃO GUIADA -->
+            <section class="mission-day">
+                <h2>Treino 1: Construindo Pontes (PT-BR -> EN)</h2>
+                <div class="activity-box">
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Sua missão é ser um tradutor! Leia a frase em português e escreva a versão completa em inglês.</p>
+                    <ul class="transform-activity">
+                        <li><p class="prompt">1. Eu tenho um telefone celular novo.</p>
+                            <input type="text" id="s3d1q1" data-answer="i have a new cell phone" class="input-full"><div class="feedback-message" id="s3d1-feedback1"></div></li>
+                        <li><p class="prompt">2. Eles não querem este computador velho.</p>
+                            <input type="text" id="s3d1q2" data-answer="they don't want this old computer" class="input-full"><div class="feedback-message" id="s3d1-feedback2"></div></li>
+                        <li><p class="prompt">3. Nós temos que beber água.</p>
+                            <input type="text" id="s3d1q3" data-answer="we have to drink water" class="input-full"><div class="feedback-message" id="s3d1-feedback3"></div></li>
+                        <li><p class="prompt">4. Você tem muitos livros velhos?</p>
+                            <input type="text" id="s3d1q4" data-answer="do you have many old books?" class="input-full"><div class="feedback-message" id="s3d1-feedback4"></div></li>
+                        <li><p class="prompt">5. Nós não temos que estudar ciências.</p>
+                            <input type="text" id="s3d1q5" data-answer="we don't have to study science" class="input-full"><div class="feedback-message" id="s3d1-feedback5"></div></li>
+                    </ul>
+                    <button id="verify-s3d1" class="check-btn">Verificar</button>
+                </div>
+            </section>
+
+            <!-- TREINO 2: MONTANDO FRASES COM ADJETIVOS -->
+            <section class="mission-day">
+                <h2>Treino 2: Quebra-cabeça de Frases</h2>
+                <div class="activity-box">
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Use os "ingredientes" para montar a frase completa na ordem certa. Lembre-se: qualidade ANTES da coisa!</p>
+                    <ul class="transform-activity">
+                        <li><p class="prompt">1. Ingredientes: I / want / a / skateboard / (red)</p>
+                             <input type="text" id="s3d2q1" data-answer="i want a red skateboard" class="input-full"><div class="feedback-message" id="s3d2-feedback1"></div></li>
+                        <li><p class="prompt">2. Ingredientes: You / have / a / backpack / (yellow)</p>
+                            <input type="text" id="s3d2q2" data-answer="you have a yellow backpack" class="input-full"><div class="feedback-message" id="s3d2-feedback2"></div></li>
+                        <li><p class="prompt">3. Ingredientes: They / don't have / a / computer / (old)</p>
+                            <input type="text" id="s3d2q3" data-answer="they don't have an old computer" class="input-full"><div class="feedback-message" id="s3d2-feedback3"></div></li>
+                        <li><p class="prompt">4. Ingredientes: We / don't want / a / video game / (new)</p>
+                            <input type="text" id="s3d2q4" data-answer="we don't want a new video game" class="input-full"><div class="feedback-message" id="s3d2-feedback4"></div></li>
+                        <li><p class="prompt">5. Ingredientes: I / have / many / friends / (new)</p>
+                            <input type="text" id="s3d2q5" data-answer="i have many new friends" class="input-full"><div class="feedback-message" id="s3d2-feedback5"></div></li>
+                    </ul>
+                     <button id="verify-s3d2" class="check-btn">Verificar</button>
+                </div>
+            </section>
+
+            <!-- TREINO 3: ESCOLHA E REESCREVA (HAVE/WANT) -->
+            <section class="mission-day">
+                <h2>Treino 3: Escolha Certa, Frase Perfeita</h2>
+                <div class="activity-box">
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Decida se a frase precisa de <span class="en-word">have</span> ou <span class="en-word">want</span> e reescreva-a por completo.</p>
+                    <ul class="transform-activity">
+                        <li><p class="prompt">1. (O que você sonha em ter) I ___ a black skateboard.</p>
+                            <input type="text" id="s3d3q1" data-answer="i want a black skateboard" class="input-full"><div class="feedback-message" id="s3d3-feedback1"></div></li>
+                        <li><p class="prompt">2. (O que você tem na sua mochila) I ___ many books.</p>
+                            <input type="text" id="s3d3q2" data-answer="i have many books" class="input-full"><div class="feedback-message" id="s3d3-feedback2"></div></li>
+                        <li><p class="prompt">3. (É uma obrigação) We ___ to study science.</p>
+                            <input type="text" id="s3d3q3" data-answer="we have to study science" class="input-full"><div class="feedback-message" id="s3d3-feedback3"></div></li>
+                        <li><p class="prompt">4. (Eles não desejam isso) They don't ___ a red car.</p>
+                            <input type="text" id="s3d3q4" data-answer="they don't want a red car" class="input-full"><div class="feedback-message" id="s3d3-feedback4"></div></li>
+                        <li><p class="prompt">5. (Você quer saber se a pessoa tem amigos) Do you ___ many friends?</p>
+                            <input type="text" id="s3d3q5" data-answer="do you have many friends?" class="input-full"><div class="feedback-message" id="s3d3-feedback5"></div></li>
+                    </ul>
+                    <button id="verify-s3d3" class="check-btn">Verificar</button>
+                </div>
+            </section>
+
+             <!-- TREINO 4: DESCREVENDO CENAS (THIS/THAT) -->
+            <section class="mission-day">
+                <h2>Treino 4: Descrevendo a Cena</h2>
+                <div class="activity-box">
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Olhe a situação e escreva a frase completa usando <span class="en-word">this</span> (para perto) ou <span class="en-word">that</span> (para longe).</p>
+                    <ul class="transform-activity">
+                        <li><p class="prompt">1. (Você aponta para um computador LONGE) Eles querem...</p>
+                            <input type="text" id="s3d4q1" data-answer="they want that computer" class="input-full"><div class="feedback-message" id="s3d4-feedback1"></div></li>
+                        <li><p class="prompt">2. (Você segura um celular na mão) Eu não quero...</p>
+                            <input type="text" id="s3d4q2" data-answer="i don't want this cell phone" class="input-full"><div class="feedback-message" id="s3d4-feedback2"></div></li>
+                        <li><p class="prompt">3. (Seu amigo mostra um livro que está PERTO de vocês) Nós gostamos...</p>
+                            <input type="text" id="s3d4q3" data-answer="we like this book" class="input-full"><div class="feedback-message" id="s3d4-feedback3"></div></li>
+                        <li><p class="prompt">4. (Você vê uma casa bonita do outro lado da rua) Eu quero...</p>
+                            <input type="text" id="s3d4q4" data-answer="i want that house" class="input-full"><div class="feedback-message" id="s3d4-feedback4"></div></li>
+                        <li><p class="prompt">5. (A caneta está na sua mesa, perto de você) Eu gosto...</p>
+                            <input type="text" id="s3d4q5" data-answer="i like this pen" class="input-full"><div class="feedback-message" id="s3d4-feedback5"></div></li>
+                    </ul>
+                    <button id="verify-s3d4" class="check-btn">Verificar</button>
+                </div>
+            </section>
+
+            <!-- TREINO 5: O QUARTO DOS SONHOS -->
+            <!-- TREINO 5: DECIFRANDO CÓDIGOS SECRETOS -->
+<section class="mission-day">
+    <h2>Treino 5: Decifrando Códigos Secretos 🔤</h2>
+    <div class="activity-box">
+        <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Atenção, decifrador! Sua missão é ouvir os códigos secretos de áudio. Cada código é a soletração de uma palavra. Escreva a palavra decifrada!</p>
+        <ul class="transform-activity">
+            <li>
+                <p class="prompt">1. Ouça o código e escreva a palavra: 
+                    <button class="audio-btn" style="background:var(--c-blue); color:white;" data-audio-src="../assets/audio/s3d5_house.mp3">🔊</button>
+                </p>
+                <input type="text" id="s3d5q1" data-answer="house" class="input-full"><div class="feedback-message" id="s3d5-feedback1"></div>
+            </li>
+            <li>
+                <p class="prompt">2. Ouça o código e escreva a palavra: 
+                    <button class="audio-btn" style="background:var(--c-blue); color:white;" data-audio-src="../assets/audio/s3d5_friend.mp3">🔊</button>
+                </p>
+                <input type="text" id="s3d5q2" data-answer="friend" class="input-full"><div class="feedback-message" id="s3d5-feedback2"></div>
+            </li>
+            <li>
+                <p class="prompt">3. Ouça o código e escreva a palavra: 
+                    <button class="audio-btn" style="background:var(--c-blue); color:white;" data-audio-src="../assets/audio/s3d5_yellow.mp3">🔊</button>
+                </p>
+                <input type="text" id="s3d5q3" data-answer="yellow" class="input-full"><div class="feedback-message" id="s3d5-feedback3"></div>
+            </li>
+            <li>
+                <p class="prompt">4. Ouça o código e escreva a palavra: 
+                    <button class="audio-btn" style="background:var(--c-blue); color:white;" data-audio-src="../assets/audio/s3d5_answer.mp3">🔊</button>
+                </p>
+                <input type="text" id="s3d5q4" data-answer="answer" class="input-full"><div class="feedback-message" id="s3d5-feedback4"></div>
+            </li>
+            <li>
+                <p class="prompt">5. Ouça o código e escreva a palavra: 
+                    <button class="audio-btn" style="background:var(--c-blue); color:white;" data-audio-src="../assets/audio/s3d5_english.mp3">🔊</button>
+                </p>
+                <input type="text" id="s3d5q5" data-answer="english" class="input-full"><div class="feedback-message" id="s3d5-feedback5"></div>
+            </li>
+        </ul>
+        <button id="verify-s3d5" class="check-btn">Verificar</button>
+    </div>
+</section>
+            
+            <button id="complete-week-btn" data-week="3" class="check-btn">CONCLUIR MISSÃO DA SEMANA</button>
+        </main>
+    </div>
     <script src="../js/atividades.js"></script>
 </body>
 </html>
